# NevstruevDmitriy_UZGA

./: CMakeLists.txt  Readme.md
application/: client_app.cpp  server_app.cpp
include/: client.h  server.h  telemetry.h
source/: client.cpp  server.cpp  telemetry.cpp
